[gd_scene load_steps=3 format=2]

[ext_resource path="res://minigame.tscn" type="PackedScene" id=1]
[ext_resource path="res://debug_level.gd" type="Script" id=2]

[node name="Debug Level" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -518.0
margin_top = -267.0
margin_right = 518.0
margin_bottom = 267.0
script = ExtResource( 2 )

[node name="Minigame" parent="." instance=ExtResource( 1 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="ColorRect0" type="ColorRect" parent="."]
margin_left = 118.0
margin_top = 199.0
margin_right = 158.0
margin_bottom = 239.0

[node name="ColorRect1" type="ColorRect" parent="."]
margin_left = 206.0
margin_top = 105.0
margin_right = 246.0
margin_bottom = 145.0

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 249.0
margin_top = 251.0
margin_right = 289.0
margin_bottom = 291.0

[node name="ColorRect3" type="ColorRect" parent="."]
margin_left = 332.0
margin_top = 95.0
margin_right = 372.0
margin_bottom = 135.0

[node name="ColorRect4" type="ColorRect" parent="."]
margin_left = 360.0
margin_top = 192.0
margin_right = 400.0
margin_bottom = 232.0

[node name="ColorRect5" type="ColorRect" parent="."]
margin_left = 443.0
margin_top = 243.0
margin_right = 483.0
margin_bottom = 283.0

[node name="ColorRect6" type="ColorRect" parent="."]
margin_left = 505.0
margin_top = 168.0
margin_right = 545.0
margin_bottom = 208.0

[node name="ColorRect7" type="ColorRect" parent="."]
margin_left = 547.0
margin_top = 92.0
margin_right = 587.0
margin_bottom = 132.0

[node name="ColorRect8" type="ColorRect" parent="."]
margin_left = 626.0
margin_top = 164.0
margin_right = 666.0
margin_bottom = 204.0

[node name="ColorRect9" type="ColorRect" parent="."]
margin_left = 697.0
margin_top = 250.0
margin_right = 737.0
margin_bottom = 290.0

[node name="ColorRect10" type="ColorRect" parent="."]
margin_left = 743.0
margin_top = 190.0
margin_right = 783.0
margin_bottom = 230.0

[node name="ColorRect11" type="ColorRect" parent="."]
margin_left = 800.0
margin_top = 129.0
margin_right = 840.0
margin_bottom = 169.0

[node name="ColorRect12" type="ColorRect" parent="."]
margin_left = 904.0
margin_top = 84.0
margin_right = 944.0
margin_bottom = 124.0

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 68.0
margin_top = 438.0
margin_right = 979.0
margin_bottom = 478.0

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
margin_right = 911.0
margin_bottom = 40.0

[connection signal="lost" from="Minigame" to="." method="_on_Minigame_lost"]
[connection signal="meter_changed" from="Minigame" to="." method="_on_Minigame_meter_changed"]
[connection signal="progress" from="Minigame" to="." method="_on_minigame_progress"]
[connection signal="reset" from="Minigame" to="." method="_on_minigame_reset"]
[connection signal="win" from="Minigame" to="." method="_on_Minigame_win"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
